--- a/src/dog-window.ui
+++ b/src/dog-window.ui
@@ -2,7 +2,7 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
-  <template class="DoggtkWindow" parent="AdwApplicationWindow">
+  <template class="DogWindow" parent="AdwApplicationWindow">
     <property name="default-width">600</property>
     <property name="default-height">600</property>
     <property name="content">
