--- a/src/dog-window.ui
+++ b/src/dog-window.ui
@@ -39,6 +39,7 @@
                         <property name="orientation">vertical</property>
                         <child>
                           <object class="GtkButton" id="petbutton">
+                            <property name="action-name">app.pet</property>
                             <child>
                               <object class="AdwButtonContent">
                                 <property name="label">Pet the dog</property>
@@ -55,7 +56,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="abandonbutton">
-                            <property name="action-name">app.quit</property>
+                            <property name="action-name">app.abandon</property>
                             <child>
                               <object class="AdwButtonContent">
                                 <property name="label">Abandon!</property>
@@ -80,7 +81,6 @@
         </property>
       </object>
     </property>
-
 
   </template>
   <menu id="primary_menu">
