--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -13,6 +13,11 @@
     background-color: @red_5;
 }
 
+.clickerbutton {
+    color: white;
+    background-color: @orange_4;
+}
+
 .UnfriendlyText {
   color: @red_2;
 }
